syntax = "proto3";
package proto;

option go_package = "./app/model/proto";

service AuthService {
    rpc Register(RegisterRequest) returns (AuthenticatedResponse) {}
    rpc Login(LoginRequest) returns (AuthenticatedResponse) {}
    rpc LoginWithGoogle(LoginWithGoogleRequest) returns (AuthenticatedResponse) {}
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {}
    rpc Refresh(RefreshRequest) returns (AuthenticatedResponse) {}
}

message RegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginWithGoogleRequest {
    string idToken = 1;
}

message Token {
    string accessToken = 1;
    string refreshToken = 2;
    int64 expiredAt = 3;
}

message AuthenticatedResponse {
    string email = 1;
    string imageUrl = 2;
    string name = 3;
    Token token = 4;
}

message GetProfileRequest {
    string accessToken = 1;
}

message GetProfileResponse {
    int64 id = 1;
    string email = 2;
    string imageUrl = 3;
    string name = 4;
}

message RefreshRequest {
    string refreshToken = 1;
}

